# mlflow-training

./: .gitignore  How-to-train.md  MLflow_Overview.pptx  README.md  bash-commands.md  prerequisites.md  pyproject.toml  requirements.txt  trainer_live_demo.ipynb  trainer_live_demo.py  training-content.md  training_improvement_notes.md  ~$MLflow_Overview.pptx
01-MLflow-Overview/: exercise-01-overview.ipynb  readme-01-overview.md  solution-01-overview.py
01-MLflow-Overview/exercise/: exercise-01-overview-solution.ipynb  exercise-01-overview.ipynb  exercise-01-overview.py  solution-01-overview.py  solution-01-overview.solution
02-MLflow-Tracking/: exercise-02-tracking.ipynb  exercise-02-tracking.py  readme-02-tracking.md
02-MLflow-Tracking/exercise/: exercise-02-tracking.ipynb  exercise-02-tracking.py  exercise-02-tracking_solution.ipynb  solution-02-tracking.py  solution-02-tracking.solution
03-MLflow-Models-and-Registry/: exercise-03-models-and-registry.py  readme-03-models-and-registry.md
03-MLflow-Models-and-Registry/exercise/: exercise-03-models-and-registry.ipynb  exercise-03-models-and-registry.py  exercise-03-models-and-registry_solution.ipynb  solution-03-models-and-registry.py  solution-03-models-and-registry.solution  test.ipynb
04-Final-project/: README-05-final-project.md
04-Final-project/excercise/: exercise-04-final-project-svm-cancer-solution.py  exercise-05-final-project-svm-cancer-solution.py  test_model_endpoint.ipynb
04-LLM-Tracing/: README-04-llm-tracing.md
04-LLM-Tracing/excercise/: excercise-04-llm-tracing.ipynb  excercise-04-llm-tracing_solution.ipynb
04-MLflow-Projects/: readme-04-projects.md
04-MLflow-Projects/hello_world/: MLproject  README.md  (+1 more)
05-Databricks/: exercise-05-databricks.ipynb
05-Final-project/: README-05-final-project.md
05-MLflow-Recipes/: recipe.yaml
06-Additional-MLflow-Components/: MLflow-Recipes.md  README-06-additional-components.md
archive/: exercise-05-final-project-scikit.py
presentation/: mlflow-training.ppt.url
(+11 files in other folders)
